K8s/test-app.yaml
# backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: gateway
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: gcr.io/k8s-staging-ingressconformance/echoserver:v20221109-6717e5c
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: gateway
spec:
  selector:
    app: backend
  ports:
    - port: 3000
      targetPort: 3000
